feat(query-engine) Switch to tokio and hyper
Replace async-std with tokio and hyper. Implement a new binary
test harness that runs the test suite through the hyper routes.

Co-authored-by: Julius de Bruijn <julius+github@nauk.io>

--- a/query-engine/connectors/sql-query-connector/Cargo.toml
+++ b/query-engine/connectors/sql-query-connector/Cargo.toml
@@ -20,7 +20,7 @@ tokio = "1.0"
 tracing = "0.1"
 tracing-futures = "0.2"
 uuid = "0.8"
-opentelemetry = { version = "0.16", features = ["async-std"] }
+opentelemetry = { version = "0.16", features = ["tokio"] }
 tracing-opentelemetry = "0.16"
 
 [dependencies.quaint]
