--- a/query-engine/connector-test-kit-rs/query-tests-setup/Cargo.toml
+++ b/query-engine/connector-test-kit-rs/query-tests-setup/Cargo.toml
@@ -16,7 +16,9 @@ qe-setup = { path = "../../../migration-engine/qe-setup" }
 request-handlers = { path = "../../request-handlers" }
 tokio = "1.0"
 query-core = { path = "../../core" }
+query-engine = { path = "../../query-engine"}
 datamodel = { path = "../../../libs/datamodel/core" }
+user-facing-errors = { path = "../../../libs/user-facing-errors" }
 thiserror = "1.0"
 async-trait = "0.1"
 nom = "6"
@@ -30,6 +32,8 @@ tracing-error = "0.2"
 colored = "2"
 indoc = "1.0"
 enumflags2 = "0.7"
+hyper = { version = "0.14", features = ["full"] }
+indexmap = { version = "1.0", features = ["serde-1"] }
 
 # Only this version is vetted, upgrade only after going through the code,
 # as this is a small crate with little user base.
